# advent2021

./: .gitignore  Cargo.toml  README.adoc
misc/: day12-recursive.rs  day12.pl  day15-naive.pl
