[package]
name = "advent2021"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.62"
bitvec = "1.0.1"
dhat = "0.3.0"
itertools = "0.10.3"
ndarray = "0.15.6"
nom = "7.1.1"

[profile.release]
debug = 1

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for package dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
dhat-heap = []  # Enable dhat's generic heap profiling
